--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "file-saver": "^2.0.5",
+    "next": "15.4.4",
+    "papaparse": "^5.5.3",
+    "quill": "^2.0.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-quill": "^2.0.0",
+    "xlsx": "^0.18.5"
   }
 }
